feat: added business logic to delete multiples
